RESOLVED FIXED109102
display:none file upload button crashes
https://bugs.webkit.org/show_bug.cgi?id=109102
Summary display:none file upload button crashes
Ojan Vafai
Reported 2013-02-06 16:10:52 PST
display:none file upload button crashes
Attachments
Patch (4.84 KB, patch)
2013-02-06 16:13 PST, Ojan Vafai
leviw: review+
Ojan Vafai
Comment 1 2013-02-06 16:13:11 PST
Levi Weintraub
Comment 2 2013-02-06 16:18:29 PST
Comment on attachment 186939 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=186939&action=review > LayoutTests/fast/forms/file/display-none-upload-button.html:15 > +// FIXME: The text inside the file input should give the input a contentHeight > +// even when there's no upload button. File a bug and link?
Ojan Vafai
Comment 3 2013-02-06 16:42:41 PST
Note You need to log in before you can comment on or make changes to this bug.